# c4core

./: .bazelrc  .clang-tidy  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  CMakeLists.txt  README.md  WORKSPACE  WORKSPACE.bazel  appveyor.yml  compat.cmake  conanfile.py  tbump.toml
.ci/: Vagrantfile  codecov.token  coveralls.token  travis-coverage.sh  travis-install.sh  travis-setenv.sh  travis-test.sh
.github/: amalgamate.py  release.sh  reqs.sh  setenv.sh
.github/docker/: build_and_push.sh
.github/docker/ubuntu18.04/: Dockerfile  c4core-install
.github/docker/ubuntu22.04/: Dockerfile  c4core-install
.github/docker/ubuntu24.04/: Dockerfile  c4core-install
.github/vagrant/: Vagrantfile  vagrant-provision.sh
.github/workflows/: Makefile  arch.yml  bazel.yml  benchmarks.yml  benchmarks.ys  ci.yml  clang.yml  clang.ys  clang_tidy.yml  clang_tidy.ys  codeql.yml  conan.yml  coverage.yml  coverage.ys  create_c4_pack.yml  emscripten.yml  emscripten.ys  gcc.yml  gcc.ys  infra.yml  infra.ys  install.yml  install.ys  intel.yml  libcxx.yml  macosx.yml  macosx.ys  release.yml  release.ys  run_tests.yml  test.yml  test_install.yml  windows.yml  windows.ys
.github/workflows-in/: Makefile  benchmarks.ys  clang.ys  codeql.ys  gcc.ys  infra.ys  install.ys  libcxx.ys  macosx.ys  release.ys  windows.ys
.github/workflows-in/ys/: common.ys
.github/workflows/ys/: common.ys
bm/: CMakeLists.txt  bm_atox.cpp  bm_base64.cpp  bm_charconv.cpp  bm_charconv.hpp  bm_charconv_threads.cpp  bm_format.cpp  bm_itoa_threads.cpp  bm_plot_c4core.py  bm_xtoa.cpp  charconv.cpp  itoa.cpp  ryu.cmake  to_chars.cpp
bm/arrow/: .gitignore  CMakeLists.txt  bm_arrowcsv_1_plain.cpp  bm_c4corecsv_1_strings_serial.cpp  bm_c4corecsv_2_values_serial.cpp  bm_c4corecsv_3_values_parallel.cpp  bm_c4corecsv_4_values_parallel_cols.cpp  bm_c4corecsv_common.hpp  bm_csv.cpp
bm/float/: CMakeLists.txt  measure.py  read.cpp
changelog/: 0.1.1-rc0.md  0.1.1.md  0.1.10.md  0.1.11.md  0.1.3.md  0.1.5.md  0.2.0.md  0.2.10.md  0.2.11.md  0.2.12.md  0.2.3.md  0.2.6.md  0.2.7.md  0.2.8.md  0.3.0.md  current.md
src/: CMakeLists.txt
src/c4/: allocator.hpp  base64.cpp  base64.hpp  bitmask.hpp  blob.hpp  c4_pop.hpp  c4_push.hpp  c4core.natvis  char_traits.cpp  char_traits.hpp  charconv.hpp  common.hpp  compiler.hpp  config.hpp  cpu.hpp  ctor_dtor.hpp  dump.hpp  enum.hpp  error.cpp  error.hpp  export.hpp  format.cpp  format.hpp  format_base64.hpp  hash.hpp  language.cpp  language.hpp  memory_resource.cpp  memory_resource.hpp  memory_util.cpp  memory_util.hpp  opt.hpp  platform.hpp  restrict.hpp  span.hpp  substr.hpp  substr_fwd.hpp  szconv.hpp  time.cpp  time.hpp  (+12 more)
src/c4/compat/: gcc-4.8.hpp
src/c4/ext/: fast_float.hpp  fast_float_all.h
src/c4/ext/sg14/: inplace_function.h
src/c4/std/: span.hpp  span_fwd.hpp  std.hpp  string.hpp  string_fwd.hpp  string_view.hpp  string_view_fwd.hpp  tuple.hpp  vector.hpp  vector_fwd.hpp
src_singleheader/c4/: c4core_all.hpp
test/: BUILD.bazel  CMakeLists.txt  allocator.cpp  allocator.hpp  base64.cpp  bitmask.cpp  blob.cpp  charconv.cpp  ctor_dtor.cpp  enum.cpp  enum_common.hpp  error.cpp  format.cpp  main.cpp  memory_resource.cpp  memory_util.cpp  printintegers.py  span.cpp  std_string.cpp  substr.cpp  szconv.cpp  test_alloc.cpp  test_allocator.cpp  test_base64.cpp  test_bitmask.cpp  test_blob.cpp  test_char_traits.cpp  test_charconv.cpp  test_ctor_dtor.cpp  test_dump.cpp  test_enum.cpp  test_enum_common.hpp  test_error.cpp  test_error_exception.cpp  test_format.cpp  test_log.cpp  test_memory_resource.cpp  test_memory_util.cpp  test_numbers.hpp  test_preprocessor.cpp  (+14 more)
test/c4/: main.cpp  test.hpp
test/c4/libtest/: archetypes.cpp  archetypes.hpp  supprwarn_pop.hpp  supprwarn_push.hpp  test.cpp
test/test_install/: CMakeLists.txt
test/test_singleheader/: CMakeLists.txt
tools/: amalgamate.py
